package com.banco.api.dto;

public record AuthResponse(String token) {
}